Homepage copy updates

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base_layout
 title: Mir display server - The fast, open and secure display server for any device
-copydoc: https://docs.google.com/document/d/1tbWEGLiNe3TDSlrc4lElbMU-EeHbV5AqAborUGA1pr4/edit#
+copydoc: https://docs.google.com/document/d/1wqmWPx4TJ_oJoFt4gBOg4trYMIAsugMYtHGXzYJx8kc/edit#
 metadata: Mir is the fast, open and secure display server to unlock next-generation user experiences. Mir runs on a range of Linux powered devices including traditional desktops, IoT and embedded products.
 ---
 
@@ -10,7 +10,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
   <div class="row p-strip--hero__row">
     <div class="col-7">
       <h1>The fast, open and secure display server for any device</h1>
-      <p>Whether you want an information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fastest path to deployment.</p>
+      <p>From mobile and desktop shells to IoT devices and robots. Whether you are building the smart screen for your information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fastest and most secure path to deployment.</p>
       <p><a href="https://assets.ubuntu.com/v1/bd787c8a-canonical-mir-datasheet-2018-12-20.pdf" class="p-button--positive"><span class="p-link--external">Get the Mir datasheet</span></a></p>
       <div>
         <a class="github-button" data-size="large" href="https://github.com/MirServer/mir" aria-label="Follow @MirServer on GitHub"></a>
@@ -21,105 +21,190 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
   </div>
 </section>
 
-<section class="p-strip--light is-bordered">
+<section class="p-strip">
   <div class="row">
-    <div class="col-8">
+    <div class="col-9">
       <h2>What is Mir?</h2>
       <p class="p-heading--4">Introducing a secure display server for IoT devices</p>
       <p>Mir is a system-level component that can be used to unlock next-generation user experiences. It runs on a range of Linux powered devices including traditional desktops, IoT and embedded products. Mir is a replacement for the X window server system, commonly used on Linux desktop devices. It allows device makers and desktop users to have a well-defined, efficient, flexible, and secure platform for their graphical environment.</p>
       <p><a href="https://ubuntu.com/blog/build-smart-display-devices-with-mir-fast-to-production-secure-open-source" class="p-button--positive"><span class="p-link--external">Download the whitepaper</span></a></p>
     </div>
+    <div class="col-3 u-hide--small u-align--center u-vertically-center">
+      <img src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark" width="400"/>
+    </div>
   </div>
 </section>
-<section class="p-strip is-bordered">
-  <div class="row">
-    <h2>Learn more</h2>
-  </div>
-  <div class="row u-equal-height">
-    <article class="p-card--featured col-4">
-      <h4 class="p-muted-heading">TUTORIAL</h4>
-      <hr />
-      <h3 class="p-heading--four">
-        <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps#0" target="_blank">How to build a digital signage app for embedded displays&nbsp;&rsaquo;</a>
-      </h3>
-      <p class="p-card--featured__date">21 May 2018</p>
-      <p>A guide to creating graphical snaps for Ubuntu IoT devices on top of an Xwayland stack. Learn how to build a digital signage app for kiosks, advertising screens and other embedded displays.</p>
-    </article>
-    <article class="p-card--featured col-4">
-      <h4 class="p-muted-heading">TUTORIAL</h4>
-      <hr />
-      <h3 class="p-heading--four">
-        <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps-xwayland#0" target="_blank">How to create graphical snaps for IoT devices on top of a Xwayland stack&nbsp;&rsaquo;</a>
-      </h3>
-      <p class="p-card--featured__date">17 May 2018</p>
-      <p>This is a guide on how to create graphical snaps for Ubuntu with a single GUI application running fullscreen on the display.</p>
-    </article>
-    <article class="p-card--article col-4">
-      <h4 class="p-muted-heading">ARTICLE</h4>
-      <hr />
-      <h3 class="p-heading--four">
-        <a href="https://community.ubuntu.com/t/snaps-to-develop-a-web-kiosk-on-ubuntu-core-using-wayland/" target="_blank">Snaps to develop a Web kiosk on Ubuntu Core (using Wayland)&nbsp;&rsaquo;</a>
-      </h3>
-      <p class="p-card--article__date">8 June 2018</p>
-      <p>Display servers solve a large and complex problem. Mir provides a broad and powerful library to solve those problems, but there is a learning curve to use Mir effectively.</p>
-    </article>
-  </div>
-</section>
+
 <section class="p-strip--light">
-  <div class="row">
-    <h2>Why Mir</h2>
+  <div class="u-fixed-width">
+    <h2>Select the right display server for you</h2>
   </div>
-  <div class="row p-divider">
-    <div class="col-6 p-divider__block">
-      <p>Historically, graphical user interfaces Linux have been powered by the X windowing system. X has a long and successful history and it has served the purposes of both system level and application level UI well for more than 3 decades. However, users nowadays expect a more consistent, integrated and secure user experience than is possible to offer on top of the X windowing system.</p>
-      <p>The X11 protocol used by X was not designed with security in mind, and a malicious application can obtain information from other running X11 applications. For instance, X11 servers do not protect sensitive information like keystrokes between applications using them.</p>
+  <div class="row">
+    <div class="col-4 p-card">
+        <a class="p-card__link-title" href="https://mir-server.io/doc/"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark"/></a>
+        <hr class="u-sv1">
+      <div class="p-card--content">
+        <p><a class="p-link--external" href="https://mir-server.io/doc/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
+      </div>
     </div>
-    <div class="col-6 p-divider__block">
-      <p>Mir was designed from the ground-up with security in mind. To meet the needs of today's users Mir avoids the X11 protocol and uses Wayland for a more modern and secure approach to graphics. Each application talks exclusively to the Mir server through it’s own socket that is both secure and robust against attack. Wayland is the de facto successor to X11 and is designed to address the problems that have proved intractable with the X windowing system.</p>
-      <p>Like Ubuntu itself, Mir is free to use, and Canonical backs it up with support, consulting and management services. Canonical makes it easy to deploy your graphical solutions using the power of Ubuntu.</p>
+    <div class="col-4 p-card">
+      <a class="p-card__link-title" href="https://snapcraft.io/ubuntu-frame"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/79e5a4c2-Ubuntu+Frame.svg" alt="Ubuntu Frame wordmark"/></a>
+      <hr class="u-sv1">
+      <div class="p-card--content">
+        <p><a class="p-link--external" href="https://snapcraft.io/ubuntu-frame">Ubuntu Frame</a> is a fullscreen shell for edge devices. Whether you are building a kiosk, point of sale, IoT device or any other product that requires a graphical output or display to the user, Ubuntu Frame instantly allows your device to run a fullscreen window. </p>
+      </div>
+    </div>
+    <div class="col-4 p-card">
+      <a class="p-card__link-title" href="https://snapcraft.io/egmde"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/c01b1a65-egmde.svg" alt="egme wordmark"/></a>
+      <hr class="u-sv1">
+      <div class="p-card--content">
+        <p><a class="p-link--external" href="https://snapcraft.io/egmde">egmde</a> is a lightweight, basic, usable graphical shell, for desktop environments. This basic shell includes several keyboard shortcuts and optional support for workspaces and shell components.</p>
+      </div>
     </div>
   </div>
 </section>
-<section class="p-strip--light u-no-padding--top is-bordered">
-  <div class="row">
-    <div class="col-8 u-sv3">
-      <h3>System architecture</h3>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <img src="https://assets.ubuntu.com/v1/1c5d16e4-Mir-diagram.svg" alt="" />
-    </div>
-  </div>
-</section>
-<section class="p-strip is-bordered">
-  <div class="row">
+
+<section class="p-strip is-deep">
+  <div class="row u-equal-height">
     <div class="col-8">
-      <h3>Examples of projects using Mir</h3>
+      <h2>Flexibility and Versatility </h2>
+      <p class="p-heading--4">Mir was designed for a number of applications</p>
+      <p>
+        Whether on embedded systems, desktop or portable devices, Mir can be used in several applications. This includes phones, healthcare kiosks, smart mirrors, and more. Mir runs on a number of Linux operating systems and its snaps are available and work on Ubuntu Core, Ubuntu, Fedora, Arch, and more.
+      </p>
     </div>
-  </div>
-  <div class="row u-equal-height">
-    <div class="p-card col-6">
-      <h4>Mir Kiosk</h4>
-      <p><a href="https://community.ubuntu.com/t/mir-kiosk-a-project-that-uses-mir/" target="_blank">A graphical output or display for everything from washing machines to smart thermostats&nbsp;&rsaquo;</a></p>
-    </div>
-    <div class="p-card col-6">
-      <h4>Unity8</h4>
-      <p><a href="https://community.ubuntu.com/t/unity8-a-project-that-uses-mir/" target="_blank">A graphical shell that targets a range of devices including phones, tablets, laptops and desktops&nbsp;&rsaquo;</a></p>
-    </div>
-  </div>
-  <div class="row u-equal-height">
-    <div class="p-card col-6">
-      <h4>Mir-kiosk snap</h4>
-      <p><a href="https://developer.ubuntu.com/core/examples/snaps-on-mir" target="_blank">How to build a kiosk-style device with Mir and Ubuntu Core&nbsp;&rsaquo;</a></p>
-    </div>
-    <div class="p-card col-6">
-      <h4>Mir Desktop Environment</h4>
-      <p><a href="https://community.ubuntu.com/t/egmde-a-project-that-uses-mir/7129" target="_blank">Egmde is a simple desktop shell that uses Mir&nbsp;&rsaquo;</a></p>
+    <div class="col-4 u-hide--small u-align--center u-vertically-center">
+      <img src="https://assets.ubuntu.com/v1/9cf9f323-Mir-flexibility.svg" alt="" width="400"/>
     </div>
   </div>
 </section>
-<section class="p-strip--light">
+
+<section class="p-strip--light is-deep">
+  <div class="row u-equal-height">
+    <div class="col-4 u-hide--small u-align--center u-vertically-center">
+      <img src="https://assets.ubuntu.com/v1/e6c4d858-Mir-easy-setup.svg" alt="" width="400"/>
+    </div>
+    <div class="col-8">
+      <h2>Easy setup and deployment</h2>
+      <p class="p-heading--4">Mir is the fastest path for the deployment of your smart display </p>
+      <p>Through features such as Mir-kiosk snap, developers instantly have a black screen with a mouse pointer to run any application you want. Mir instantly turns any device into a kiosk or digital signage solution. </p>
+    </div>
+  </div>
+</section>
+
+<section class="p-strip is-deep">
+  <div class="row u-equal-height">
+    <div class="col-8">
+      <h2>Secure</h2>
+      <p class="p-heading--4">Mir reduces the attack vector of display applications</p>
+      <p>
+        Mir was designed from the ground-up with security in mind. With Mir, applications only talk to the server, and the server is careful about the information provided to applications.
+      </p>
+    </div>
+    <div class="col-4 u-align--center u-vertically-center u-hide--small">
+      <img src="https://assets.ubuntu.com/v1/aa7d72f2-Mir-secure.svg" alt="" width="400"/>
+    </div>
+  </div>
+</section>
+
+<section class="p-strip--light is-deep">
+  <div class="row u-equal-height">
+    <div class="col-4 u-hide--small u-align--center u-vertically-center">
+      <img src="https://assets.ubuntu.com/v1/918b7826-Mir-performance.svg" alt="" width="400">
+    </div>
+    <div class="col-8">
+      <h2>Performance</h2>
+      <p class="p-heading--4">Mir uses next-generation features but guarantees backwards-compatibility</p>
+      <p>
+        Mir is designed to take advantage of modern hardware supporting GL and avoids unnecessary compositing steps. All of the window management logic is in the server process with no separate window manager process, removing communication overhead.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="p-strip is-deep">
+  <div class="u-fixed-width">
+    <h2>Mir Compatibility</h2>
+    <table aria-label="Mir compatibility table">
+      <thead>
+        <tr>
+          <th>Platform</th>
+          <th>Driver Requirements</th>
+          <th>Examples</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>gbm-kms</td>
+          <td>
+            KMS, libgbm and an EGL supporting<br />
+            EGL_WL_bind_wayland_display
+          </td>
+          <td>
+            RPi3b (vc4)<br />
+            RPi4 (V3D)<br />
+            Intel (i915)<br />
+            Nvidia (Nouveau)<br />
+            AMD (radeon)
+          </td>
+        </tr>
+        <tr>
+          <td>eglstream-kms</td>
+          <td>Proprietary Nvidia drivers</td>
+          <td>Nvidia</td>
+        </tr>
+        <tr>
+          <td>dispmanx</td>
+          <td>Proprietary Broadcom DispmanX API</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>android</td>
+          <td>3rd party (UBports) works with a libhybris container for Android drivers</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>x11</td>
+          <td>A host environment supporting X11</td>
+          <td>Ubuntu Desktop</td>
+        </tr>
+        <tr>
+          <td>wayland</td>
+          <td>A host environment supporting Wayland wl_shell</td>
+          <td>Ubuntu Wayland Desktop</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="u-fixed-width">
+    <p class="u-float-right">
+      <a class="p-link--external" href="https://discourse.ubuntu.com/t/mir-graphics-support/13185">More information about Mir graphic support&nbsp;›</a>
+    </p>
+  </div>
+</section>
+
+<section class="p-strip--light is-deep">
+  <div class="row u-equal-height">
+    <div class="col-6">
+      <h2>Full enterprise support available<br > with no subscription needed</h2>
+      <p class="p-heading--4">Optional 24/7 support with 10 year security maintenance</p>
+      <p>
+        As the publishers of Mir, we deliver the world’s most efficient display server and signage solution for Ubuntu.
+      </p>
+      <p>
+        <a class="p-button--positive" href="https://ubuntu.com/internet-of-things/digital-signage#get-in-touch">
+          Contact us
+        </a>
+      </p>
+    </div>
+    <div class="col-1"></div>
+    <div class="col-5 u-hide--small u-align--center u-vertically-center">
+      <img src="https://assets.ubuntu.com/v1/5d6da5c4-logo-canonical-aubergine.svg" alt="" width="400">
+    </div>
+  </div>
+</section>
+
+<section class="p-strip is-bordered">
   <div class="row">
     <h2>Get involved</h2>
   </div>
