Update missing sections

--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -6,12 +6,12 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
 ---
 
 {% block content %}
-<section class="p-strip--hero is-deep">
+<section class="p-strip--hero__new is-deep">
   <div class="row p-strip--hero__row">
     <div class="col-7">
       <h1>A secure and long term supported display server for embedded devices</h1>
       <p>Ubuntu Frame is a reliable and secure fullscreen shell to power any embedded display. Simple to configure, simple to deploy.</p>
-      <p><a href="https://assets.ubuntu.com/v1/bd787c8a-canonical-mir-datasheet-2018-12-20.pdf" class="p-button--positive"><span class="p-link--external">Get the Ubuntu Frame datasheet</span></a></p>
+      <p><a href="https://assets.ubuntu.com/v1/713b9224-Ubuntu.Frame.Datasheet.pdf" class="p-button--positive"><span class="p-link--external">Get the Ubuntu Frame datasheet</span></a></p>
     </div>
   </div>
 </section>
@@ -30,15 +30,15 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
   <div class="u-fixed-width">
     <div class="p-logo-section">
       <p class="p-logo-section__title u-align-text--center">
-        Partners
+        COMPATIBLE WITH POPULAR GRAPHICAL TOOLKITS
       </p>
       <div class="p-logo-section__items">
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/da624039-electron-logo.svg" alt="Electron logo"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/4076f787-QT-software.png" alt="Qt logo"></div>
+        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/83a68156-electron-logo.svg" alt="Electron logo"></div>
+        <div class="p-logo-section__item u-align--center"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/4076f787-QT-software.png" alt="Qt logo"  style="max-width: 80px;"></div>
         <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/02ee3953-799px-Google-flutter-logo.png" alt="Flutter logo"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/ed6a90bf-gtk-logo.jpeg" alt="GTK logo"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/24a4d66d-HTML5_logo_and_wordmark.svg" alt="HTML5 logo"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/c5977a9f-Simple_DirectMedia_Layer%2C_Logo.svg.png" alt="SDL logo"></div>
+        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/ed6a90bf-gtk-logo.jpeg" alt="GTK logo" style="margin-left: 1rem;"></div>
+        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/24a4d66d-HTML5_logo_and_wordmark.svg" alt="HTML5 logo" style="max-height: 80px; margin-top: 1rem"></div>
+        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/c5977a9f-Simple_DirectMedia_Layer%2C_Logo.svg.png" alt="SDL logo" style="max-width: 90px"></div>
       </div>
     </div>
   </div>
@@ -46,7 +46,147 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
 <section class="p-strip--light">
   <div class="u-fixed-width">
     <h2>All your display needs in one snap</h2>
-    <p>On-screen keyboard, multi-finger support, touch to focus, and more. Focus on your graphic interface design, Ubuntu Frame will do the rest.</p>
+    <p>On-screen keyboard, multi-finger support, touch to focus, and more.<br/>Focus on your graphic interface design, Ubuntu Frame will do the rest.</p>
+  </div>
+</section>
+<section class="p-strip">
+  <div class="row u-equal-height u-vertically-center">
+    <div class="col-6">
+      <h2 class="u-sv3">How to get started with<br/> Ubuntu Frame</h2>
+      <ol class="p-stepped-list">
+        <li class="p-stepped-list__item">
+          <h3 class="p-stepped-list__title"> Setup your device </h3>
+          <p style="padding-left: 3.5rem;">You need either <a href="https://ubuntu.com/core" class="p-link--external">Ubuntu Core</a> or a version of Linux supporting snaps</p>
+        </li>
+        <li class="p-stepped-list__item">
+          <h3 class="p-stepped-list__title"> Install Ubuntu Frame </h3>
+          <div style="padding-left: 3.5rem;"><pre><code>$ sudo snap install ubuntu-frame</code></pre></div>
+        </li>
+        <li class="p-stepped-list__item">
+          <h3 class="p-stepped-list__title"> Install your application </h3>
+          <div style="padding-left: 3.5rem;"><pre><code>$ sudo snap install [your-app]</code></pre></div>
+        </li>
+      </ol>
+    </div>
+    <div class="col-1"></div>
+    <div class="col-5 p-card">
+      <div class="p-heading-icon--muted u-sv2">
+        <div class="p-heading-icon__header">
+          <img class="p-heading-icon__img p-heading-icon__img--small" src="https://assets.ubuntu.com/v1/5edefef9-Datasheet.svg"  alt="Datasheet"  width="32" height="28"  loading="lazy" />
+          <div class="p-heading-icon__title u-vertically-center">Datasheet</div>
+        </div>
+      </div>
+      <h3>Learn more about Ubuntu Frame</h3>
+      <ul class="p-list">
+        <li class="p-list__item is-ticked">Detailed product overview</li>
+        <li class="p-list__item is-ticked">Tutorials</li>
+        <li class="p-list__item is-ticked">Answers to frequently asked questions</li>
+      </ul>
+      <p><a href="https://assets.ubuntu.com/v1/713b9224-Ubuntu.Frame.Datasheet.pdf" class="p-button p-link--external">Download the datasheet</a></p>
+    </div>
+  </div>
+</section>
+<section class="p-strip--light">
+  <div class="row u-vertically-center">
+    <div class="col-7">
+      <h2>More time for innovation</h2>
+      <p>Frame automatically enables input from touch, keyboard and mouse, windows behaviours and dynamics, and provides secure client-server communications. This gives you time to work on your graphic application.</p>
+    </div>
+    <div class="col-5 u-hide--small u-align--center">
+      <img src="https://assets.ubuntu.com/v1/6d8a72cb-Agile+development.svg" alt="More time for innovation" width="175" height="150" loading="lazy"/>
+    </div>
+  </div>
+</section>
+<section class="p-strip">
+  <div class="row u-vertically-center">
+    <div class="col-5 u-hide--small u-align--center">
+      <img src="https://assets.ubuntu.com/v1/e6c4d858-Mir-easy-setup.svg" alt="Simplified development" width="300" height="240" loading="lazy" />
+    </div>
+    <div class="col-7">
+      <h2>Simplified development</h2>
+      <p>With Ubuntu Frame, installing the full graphical stack is as simple as one single command thanks to Snaps, the next-generation package format for Linux. In addition, benefit from enhanced features built-in such as automatic updates or rollback on failure.</p>
+    </div>
+  </div>
+</section>
+<section class="p-strip--light">
+  <div class="row u-vertically-center">
+    <div class="col-6">
+      <h2>A reliable graphical server</h2>
+      <p>Ubuntu Frame reliability has been widely tested in the field. Its technology has been in development for over 7 years and in production for 5 years. As such, Ubuntu Frame is one of the most mature graphical servers available today for embedded devices.</p>
+    </div>
+    <div class="col-6 u-hide--small u-align--center">
+      <img src="https://assets.ubuntu.com/v1/d127abd7-safety+reliability.svg" alt="Supported for your device lifetime" width="150" height="150" loading="lazy" />
+    </div>
+  </div>
+</section>
+<section class="p-strip">
+  <div class="row u-vertically-center">
+    <div class="col-5 u-hide--small u-align--center">
+      <img src="https://assets.ubuntu.com/v1/ceb481d1-10+years.svg" alt="Supported for your device lifetime" width="150" height="150" loading="lazy" />
+    </div>
+    <div class="col-7">
+      <h2>Supported for your device lifetime</h2>
+      <p>When used in conjunction with Ubuntu Core, the OS tailored for the IoT, Ubuntu Frame comes with 10 years of security updates.</p>
+      <p>Learn more about <a href="https://ubuntu.com/core" class="p-link--external">Ubuntu Core</a></p>
+    </div>
+  </div>
+</section>
+<section class="p-strip--light">
+  <div class="row u-vertically-center u-sv3">
+    <div class="col-7">
+      <h2>Designed for enhanced security</h2>
+      <p>Thanks to Ubuntu Frame's own secure socket, applications can only talk exclusively to the Ubuntu Frame server. This reduces attack vectors since there is no inter-process communication to be snooped on by malicious code.</p>
+      <p><a href="https://ubuntu.com/core" class="p-link--external">Learn more about snaps security in this independent cybersecurity evaluation</a></p>
+    </div>
+    <div class="col-5 u-hide--small u-align--center">
+      <img  src="https://assets.ubuntu.com/v1/9c80823b-confinement.svg" alt="confinement" width="263" height="150" loading="lazy"/>
+    </div>
+  </div>
+  <div class="u-fixed-width u-align--center u-hide--small">
+    <img src="https://assets.ubuntu.com/v1/6d3a64c3-Diagram.png" alt="diagram"/>
+  </div>
+</section>
+<section class="p-strip">
+  <div class="row u-vertically-center">
+    <div class="col-6">
+      <h2>Ready for all boards, frameworks and applications</h2>
+      <p>Minimise your costs and time to market: Ubuntu Frame is compatible with the most popular frameworks and silicon.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="p-card col-4">
+      <h3 class="p-card__title">Raspberry Pi</h3>
+      <a href="https://ubuntu.com/download/raspberry-pi-core">
+        <img class="u-hide--small" src="https://assets.ubuntu.com/v1/a999bb5f-Raspberry+Pi+4.png" alt="Raspberry Pi" width="300" height="192" loading="lazy" />
+      </a>
+    </div>
+    <div class="p-card col-4">
+      <h3 class="p-card__title">Intel NUC</h3>
+      <a href="https://ubuntu.com/download/intel-nuc">
+        <img class="u-hide--small" src="https://assets.ubuntu.com/v1/347b2456-intelnuc.png" alt="Intel NUC" width="300" height="214" loading="lazy" />
+      </a>
+    </div>
+    <div class="p-card col-4">
+      <h3 class="p-card__title">Dragonboard</h3>
+      <a href="https://ubuntu.com/download/qualcomm-dragonboard-410c">
+        <img class="u-hide--small" src="https://assets.ubuntu.com/v1/a64b7ee2-dragonboard.png", alt="Dragonboard", width="300", height="184", loading="lazy" />
+      </a>
+    </div>
+    <p><a class="p-link--external" href="https://discourse.ubuntu.com/t/where-does-ubuntu-frame-work/23193">More information about Ubuntu Frame graphic support</a></p>
+  </div>
+</section>
+<section class="p-strip--light">
+  <div class="row u-equal-height">
+    <div class="col-5 u-align--center u-hide--small">
+      <img src="https://assets.ubuntu.com/v1/c4b290c8-Contact+us.svg" alt="Contact us" width="280" height="280" loading="lazy" />
+    </div>
+    <div class="col-7 u-vertically-center">
+      <div>
+        <h2>Need help?</h2>
+        <p>Let’s get your device faster to market</p>
+        <p><a href="https://microk8s.io/contact-us" class="p-button--positive js-invoke-modal">Contact us</a></p>
+      </div>
+    </div>
   </div>
 </section>
 {% endblock content %}
