Add animation as video

--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -11,11 +11,11 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <div class="col-7">
       <h1>A secure and long term supported display server for embedded devices</h1>
       <p>Ubuntu Frame is a reliable and secure fullscreen shell to power any embedded display. Simple to configure, simple to deploy.</p>
-      <p><a href="https://assets.ubuntu.com/v1/713b9224-Ubuntu.Frame.Datasheet.pdf" class="p-button--positive"><span class="p-link--external">Get the Ubuntu Frame datasheet</span></a></p>
+      <p><a href="https://assets.ubuntu.com/v1/713b9224-Ubuntu.Frame.Datasheet.pdf" class="p-button--positive">Get the Ubuntu Frame datasheet</a></p>
     </div>
   </div>
 </section>
-<section class="p-strip--light">
+<section class="p-strip">
   <div class="row u-vertically-center">
     <div class="col-6">
       <h2>The foundation for embedded graphical display implementations</h2>
@@ -26,7 +26,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
   </div>
 </section>
-<section class="p-strip">
+<section class="p-strip--light">
   <div class="u-fixed-width">
     <div class="p-logo-section">
       <p class="p-logo-section__title u-align-text--center">
@@ -43,13 +43,18 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
   </div>
 </section>
-<section class="p-strip--light">
+<section class="p-strip">
   <div class="u-fixed-width">
-    <h2>All your display needs in one snap</h2>
-    <p>On-screen keyboard, multi-finger support, touch to focus, and more.<br/>Focus on your graphic interface design, Ubuntu Frame will do the rest.</p>
+    <h2>One tool, all key interaction functionalities</h2>
+    <p>Besides keyboard and mouse input, Ubuntu Frame also automatically enables all the functionality that end&ndash;users expect while interacting with digital displays. This includes a wide range of touch gestures such as: multi&ndash;finger support, swipe, zoom in and out, touch to focus, and more. It also comes with its own on&ndash;screen keyboard. </p>
+  </div>
+  <div class="row">
+    <div class="u-embedded-media col-9">
+      <iframe title="Ubuntu Frame animation" class="u-embedded-media__element " src="https://assets.ubuntu.com/v1/e62f69d9-ubuntu-frame-animation.mp4" allowfullscreen="" allow="autoplay" ></iframe>
+    </div>
   </div>
 </section>
-<section class="p-strip">
+<section class="p-strip--light">
   <div class="row u-equal-height u-vertically-center">
     <div class="col-6">
       <h2 class="u-sv3">How to get started with<br/> Ubuntu Frame</h2>
@@ -70,10 +75,10 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
     <div class="col-1"></div>
     <div class="col-5 p-card">
-      <div class="p-heading-icon--muted u-sv2">
+      <div class="p-heading-icon--small">
         <div class="p-heading-icon__header">
           <img class="p-heading-icon__img p-heading-icon__img--small" src="https://assets.ubuntu.com/v1/5edefef9-Datasheet.svg"  alt="Datasheet"  width="32" height="28"  loading="lazy" />
-          <div class="p-heading-icon__title u-vertically-center">Datasheet</div>
+          <p class="p-heading--4">Datasheet</p>
         </div>
       </div>
       <h3>Learn more about Ubuntu Frame</h3>
@@ -86,7 +91,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
   </div>
 </section>
-<section class="p-strip--light">
+<section class="p-strip">
   <div class="row u-vertically-center">
     <div class="col-7">
       <h2>More time for innovation</h2>
@@ -97,7 +102,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
   </div>
 </section>
-<section class="p-strip">
+<section class="p-strip--light">
   <div class="row u-vertically-center">
     <div class="col-5 u-hide--small u-align--center">
       <img src="https://assets.ubuntu.com/v1/e6c4d858-Mir-easy-setup.svg" alt="Simplified development" width="300" height="240" loading="lazy" />
@@ -108,7 +113,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
   </div>
 </section>
-<section class="p-strip--light">
+<section class="p-strip">
   <div class="row u-vertically-center">
     <div class="col-6">
       <h2>A reliable graphical server</h2>
@@ -119,7 +124,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
   </div>
 </section>
-<section class="p-strip">
+<section class="p-strip--light">
   <div class="row u-vertically-center">
     <div class="col-5 u-hide--small u-align--center">
       <img src="https://assets.ubuntu.com/v1/ceb481d1-10+years.svg" alt="Supported for your device lifetime" width="150" height="150" loading="lazy" />
@@ -131,7 +136,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
   </div>
 </section>
-<section class="p-strip--light">
+<section class="p-strip">
   <div class="row u-vertically-center u-sv3">
     <div class="col-7">
       <h2>Designed for enhanced security</h2>
@@ -146,7 +151,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <img src="https://assets.ubuntu.com/v1/6d3a64c3-Diagram.png" alt="diagram"/>
   </div>
 </section>
-<section class="p-strip">
+<section class="p-strip--light">
   <div class="row u-vertically-center">
     <div class="col-6">
       <h2>Ready for all boards, frameworks and applications</h2>
@@ -160,22 +165,22 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
         <img class="u-hide--small" src="https://assets.ubuntu.com/v1/a999bb5f-Raspberry+Pi+4.png" alt="Raspberry Pi" width="300" height="192" loading="lazy" />
       </a>
     </div>
-    <div class="p-card col-4">
-      <h3 class="p-card__title">Intel NUC</h3>
+    <div class="p-card col-4 u-align--center">
+      <h3 class="p-card__title u-align--left">Intel NUC</h3>
       <a href="https://ubuntu.com/download/intel-nuc">
-        <img class="u-hide--small" src="https://assets.ubuntu.com/v1/347b2456-intelnuc.png" alt="Intel NUC" width="300" height="214" loading="lazy" />
+        <img class="u-hide--small" src="https://assets.ubuntu.com/v1/195fca60-NUC-board.png" alt="Intel NUC" width="198" height="140" loading="lazy" />
       </a>
     </div>
     <div class="p-card col-4">
       <h3 class="p-card__title">Dragonboard</h3>
       <a href="https://ubuntu.com/download/qualcomm-dragonboard-410c">
-        <img class="u-hide--small" src="https://assets.ubuntu.com/v1/a64b7ee2-dragonboard.png", alt="Dragonboard", width="300", height="184", loading="lazy" />
+        <img class="u-hide--small u-align--center u-vertically-center" src="https://assets.ubuntu.com/v1/a64b7ee2-dragonboard.png", alt="Dragonboard", width="300", height="184", loading="lazy" />
       </a>
     </div>
     <p><a class="p-link--external" href="https://discourse.ubuntu.com/t/where-does-ubuntu-frame-work/23193">More information about Ubuntu Frame graphic support</a></p>
   </div>
 </section>
-<section class="p-strip--light">
+<section class="p-strip is-bordered">
   <div class="row u-equal-height">
     <div class="col-5 u-align--center u-hide--small">
       <img src="https://assets.ubuntu.com/v1/c4b290c8-Contact+us.svg" alt="Contact us" width="280" height="280" loading="lazy" />
@@ -190,3 +195,14 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
   </div>
 </section>
 {% endblock content %}
+
+
+{{ image (
+  url="https://assets.ubuntu.com/v1/195fca60-NUC-board.png",
+  alt="",
+  width="198",
+  height="140",
+  hi_def=True,
+  loading="auto|lazy"
+  ) | safe
+}}
