--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -49,9 +49,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <p>Besides keyboard and mouse input, Ubuntu Frame also automatically enables all the functionality that end&ndash;users expect while interacting with digital displays. This includes a wide range of touch gestures such as: multi&ndash;finger support, swipe, zoom in and out, touch to focus, and more. It also comes with its own on&ndash;screen keyboard. </p>
   </div>
   <div class="row">
-    <div class="u-embedded-media col-9">
-      <iframe title="Ubuntu Frame animation" class="u-embedded-media__element " src="https://assets.ubuntu.com/v1/e62f69d9-ubuntu-frame-animation.mp4" allowfullscreen="" allow="autoplay" ></iframe>
-    </div>
+      <img src="https://assets.ubuntu.com/v1/9ba4d46f-ubuntu-frame-animation-resized-3.gif" alt="Ubuntu Frame animation"/>
   </div>
 </section>
 <section class="p-strip--light">
