Updated gtk logo

--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -36,7 +36,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
         <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/83a68156-electron-logo.svg" alt="Electron logo"></div>
         <div class="p-logo-section__item u-align--center"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/4076f787-QT-software.png" alt="Qt logo"  style="max-width: 80px;"></div>
         <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/02ee3953-799px-Google-flutter-logo.png" alt="Flutter logo"></div>
-        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/ed6a90bf-gtk-logo.jpeg" alt="GTK logo" style="margin-left: 1rem;"></div>
+        <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/d73dbd10-GTK+no+background+%281%29.png" alt="GTK logo" style="margin-left: 1rem;"></div>
         <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/24a4d66d-HTML5_logo_and_wordmark.svg" alt="HTML5 logo" style="max-height: 80px; margin-top: 1rem"></div>
         <div class="p-logo-section__item"><img class="p-logo-section__logo" src="https://assets.ubuntu.com/v1/c5977a9f-Simple_DirectMedia_Layer%2C_Logo.svg.png" alt="SDL logo" style="max-width: 90px"></div>
       </div>
@@ -187,7 +187,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
       <div>
         <h2>Need help?</h2>
         <p>Let’s get your device faster to market</p>
-        <p><a href="https://microk8s.io/contact-us" class="p-button--positive js-invoke-modal">Contact us</a></p>
+        <p><a href="https://ubuntu.com/internet-of-things/digital-signage" class="p-button--positive">Contact us</a></p>
       </div>
     </div>
   </div>
