Update animation video

--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -49,7 +49,9 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <p>Besides keyboard and mouse input, Ubuntu Frame also automatically enables all the functionality that end&ndash;users expect while interacting with digital displays. This includes a wide range of touch gestures such as: multi&ndash;finger support, swipe, zoom in and out, touch to focus, and more. It also comes with its own on&ndash;screen keyboard. </p>
   </div>
   <div class="row">
-      <img src="https://assets.ubuntu.com/v1/9ba4d46f-ubuntu-frame-animation-resized-3.gif" alt="Ubuntu Frame animation"/>
+    <video autoplay="" loop="" muted="">
+      <source src="https://assets.ubuntu.com/v1/a1f6a1d8-ubuntu-frame-animation-fast.mp4">
+    </video>
   </div>
 </section>
 <section class="p-strip--light">
